Several fixes and renaming files (pos-chery pick merge)